# rostend

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: release.yml  rust.yml
examples/: Dockerfile  make_example.sh  simpleA.service  simpleB.service
examples/example_service/: Cargo.toml
examples/example_service/src/: main.rs
examples/units/: simpleA.service  simpleB.service
src/: main.rs  services.rs  units.rs
