[package]
name = "rostend"
version = "0.1.0"
authors = ["Dirk Leifeld <leifeld@posteo.de>"]
description = "systemd compactilbe init system for containers."
edition = "2018"
default-run = "rostend"
readme = "README.md"
license = "Apache-2.0"
repository = "https://github.com/EdorianDark/rostend.git"

[badges.github]
branch = "master"
repository = "EdorianDark/rostend"

[dependencies]
